--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@heroicons/vue": "^2.2.0",
     "@types/axios": "^0.9.36",
     "@vue/compiler-sfc": "^3.5.25",
-    "axios": "^1.11.0",
+    "@vueuse/core": "^14.2.0",
+    "axios": "^1.13.4",
+    "chart.js": "^4.5.1",
+    "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
-    "pinia": "^3.0.3",
+    "pinia": "^3.0.4",
     "vue": "^3.5.25",
+    "vue-chartjs": "^5.3.3",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.6.3"
   },
