--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test src/tests/e2e",
+    "lint": "eslint src --ext .ts,.vue --fix"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
@@ -16,6 +22,7 @@
     "@fortawesome/vue-fontawesome": "^3.1.2",
     "@heroicons/vue": "^2.2.0",
     "@types/axios": "^0.9.36",
+    "@unhead/vue": "^2.1.4",
     "@vue/compiler-sfc": "^3.5.25",
     "@vueuse/core": "^14.2.0",
     "axios": "^1.13.4",
@@ -29,12 +36,17 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^25.3.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "happy-dom": "^20.6.3",
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
+    "vitest": "^4.0.18",
     "vue-tsc": "^3.1.5"
   }
 }
