--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "axios": "^1.13.4",
     "chart.js": "^4.5.1",
     "date-fns": "^4.1.0",
+    "jspdf": "^4.2.0",
+    "jspdf-autotable": "^5.0.7",
     "leaflet": "^1.9.4",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
