feat: Implement property map explorer, property creation and editing, and admin user management.

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # ─── App ────────────────────────────────────────────────────────────────────
 # Base URL for the backend API (must include /api suffix, HTTPS in production)
-VITE_API_URL=http://api.rentus/api
+VITE_API_URL=http://api.backend-rentus/api
 
 # ─── Google Maps ─────────────────────────────────────────────────────────────
 # Restrict this key to your domain(s) in Google Cloud Console
